# airgapped-rpm-repo-lite

./: .gitignore  LICENSE  README.md  pyproject.toml
ansible/: ansible.cfg
ansible/artifacts/manifests/: .gitkeep
ansible/inventories/: e2e_hosts.yml  hosts.yml
ansible/playbooks/: collect_manifests.yml  patch_hosts.yml
ansible/roles/manifest_collector/tasks/: main.yml
ansible/roles/patch_host/tasks/: main.yml
ansible/roles/repo_client/handlers/: main.yml
ansible/roles/repo_client/tasks/: main.yml
ansible/roles/repo_client/templates/: internal-repo.repo.j2
automation/: e2e_test.sh  truth-table.json
automation/artifacts/e2e-lite-proof/: .gitkeep
automation/artifacts/e2e-lite-proof/2026-01-03-infra-blocked/: infrastructure-status.md  validation-results.txt
docs/: caveats.md  deployment.md  operations.md
schemas/: bundle-metadata.schema.json  manifest.schema.json
scripts/common/: logging.sh  validation.sh
scripts/internal/: import_bundle.sh  publish_repos.sh  verify_bundle.sh
scripts/provision/: install_python_deps.sh
src/: __init__.py
src/bundle_builder/: __init__.py  builder.py  downloader.py  resolver.py
src/manifest_tools/: __init__.py  collector.py  merger.py  validator.py
tests/: __init__.py  conftest.py  test_bundle_builder.py  test_manifest_tools.py
